2002-07-21  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mi-config.el (toplevel): Add autoload for
	'mode-info-elisp-info-ref'.
	(mode-info-advise-describe-commands): New option.
	(mode-info-elisp-add-function-button): Refer the above option.
	(mode-info-elisp-add-variable-button): Ditto.
	(mode-info-key-or-menu-binding): New function.
	(mode-info-elisp-add-command-button): Use the above function and
	refer the above option.
	(mode-info-advise-info-commands): Renamed from
	`mode-info-emacs-command-node'.
	(mode-info-emacs-command-node): Follow the above renaming.
	(mode-info-elisp-info-ref): New advise.

2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.6.

	* mi-util.el (mode-info-static-if): Add edebug form spec.

	* mi-config.el (mode-info-elisp-add-command-button): Advised for
	only FSF Emacs.

	* mode-info.el (mode-info-default-class): New option.
	(mode-info-new): Argument spec is changed.  Refer
	`mode-info-default-class'.
	(read-tag): Print the class name in prompt.
	(mode-info-find-tag): Reimplemented.

	* mi-index.el (mode-info-search-info-files): Check whether
	directory exists before `directory-files' is called.
	(mode-info-regexp-opt): Install workaround to avoid shy-grouping.

	* mi-emacs.el (mode-info-emacs-titles): Change its default.

	* mi-elisp.el (mode-info-elisp-titles): Change its default.

2002-07-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mode-info.el (mode-info-index-coding-system): Abolished.

	* mi-ruby.el (mode-info-ruby-titles): Change its default.

	* mi-perl.el (mode-info-perl-titles): Change its default.

	* mi-octave.el (mode-info-octave-titles): Change its default.

	* mi-libc.el (mode-info-libc-titles): Change its default.

	* mi-index.el (mode-info-read-coding-system): Renamed from
	`mode-info-coding-system'.
	(mode-info-write-coding-system): New option.
	(mode-info-make-all-indices): If an error occurs, print its
	message.
	(mode-info-node-top-regexp): Relaxed.